src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Completion_Status__c</fullName>
        <description>Used in SSR Reports and Dashboards</description>
        <formula>IF( Days_Overdue__c &gt; 0, &quot;Past Due&quot;, &quot;On Time&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup for Contact. Workflow copies Name lookup into this one, if the lookup is a Contact.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Activities (Contact)</relationshipLabel>
        <relationshipName>Activities_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Is_Created_By_Groove__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this activity was automatically created by Groove. This can be used as signal for workflows to trigger (field updates, email alerts, etc.).</inlineHelpText>
        <label>Is Created By Groove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__LastModifiedDate__c</fullName>
        <inlineHelpText>is the most recent date/time on which Groove updated the event record or the date/time a logged email was sent by the sender.</inlineHelpText>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Last_Opened_Date__c</fullName>
        <inlineHelpText>If a task reflects a tracked email, this field indicates the timestamp of the most recent open event (most recent email open by one of the recipients).</inlineHelpText>
        <label>Last Opened Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Mirror_in_Owner_s_Calendar__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>controls whether or not this event will be mirrored in the corporate calendar of the user who is the owner of this event. This field is part of the Groove calendar integration.</inlineHelpText>
        <label>Mirror in Owner&apos;s Calendar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Replied__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>indicates whether Groove detected at least one reply to this Email (Task). This only works if the respective email was logged (e.g. via Groove Email Sync or Groove for Gmail).</inlineHelpText>
        <label>Replied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Times_Clicked__c</fullName>
        <inlineHelpText>If a task reflects a tracked email, this field indicates how many times any of the links contained in the email was clicked.</inlineHelpText>
        <label>Times Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Times_Opened__c</fullName>
        <inlineHelpText>if a task reflects a tracked email, this field indicates how many times the email was opened by any of the recipients.</inlineHelpText>
        <label>Times Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__vCal_IID__c</fullName>
        <inlineHelpText>is the instance ID of a recurring calendar event or the id of a referenced email. This field is part of Groove integration.</inlineHelpText>
        <label>IID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__vCal_UID__c</fullName>
        <inlineHelpText>is the unique ID of an activity such as the calendar event UID or the email message ID. This field is part of the Groove calendar integration.</inlineHelpText>
        <label>UID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Initiated__c</fullName>
        <label>Date Initiated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Overdue__c</fullName>
        <description>Used in SSR Reports and Dashboards.</description>
        <formula>BLANKVALUE(Date_Completed__c, TODAY() )- ActivityDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Department</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_Org_Link__c</fullName>
        <formula>IF( 
NOT(ISBLANK(Previous_Activity_Id__c)), 
&quot;https://bethel-university-old.my.salesforce.com/&quot;+ Previous_Activity_Id__c, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Old Org Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <formula>IF(NOT(ISBLANK( Opportunity__c )), 
 Opportunity__r.Owner.Full_Name__c , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Program__c</fullName>
        <formula>IF(NOT(ISBLANK( Opportunity__c )), 
 Opportunity__r.Academic_Program__r.Program_Name_on_Application__c  , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>IF(NOT(ISBLANK( Opportunity__c )), 
 TEXT(Opportunity__r.StageName) +&quot; : &quot;+TEXT(Opportunity__r.Stage_Detail__c) , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Term__c</fullName>
        <formula>IF(NOT(ISBLANK( Opportunity__c )), 
 Opportunity__r.Academic_Term__r.Name , null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>duplicates Related To field if it looks up an Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Activities (Opp)</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admission Process</fullName>
                </value>
                <value>
                    <fullName>Email About Student</fullName>
                </value>
                <value>
                    <fullName>Email From Student</fullName>
                </value>
                <value>
                    <fullName>Email To Student</fullName>
                </value>
                <value>
                    <fullName>Learning Analytics</fullName>
                </value>
                <value>
                    <fullName>Meeting About Student</fullName>
                </value>
                <value>
                    <fullName>Meeting With Student</fullName>
                </value>
                <value>
                    <fullName>Online Form</fullName>
                </value>
                <value>
                    <fullName>Orientation Process</fullName>
                </value>
                <value>
                    <fullName>Phone Call About Student</fullName>
                </value>
                <value>
                    <fullName>Phone Call From Student</fullName>
                </value>
                <value>
                    <fullName>Phone Call To Student</fullName>
                </value>
                <value>
                    <fullName>Registration Process</fullName>
                </value>
                <value>
                    <fullName>Retention Project</fullName>
                </value>
                <value>
                    <fullName>Voicemail About Student</fullName>
                </value>
                <value>
                    <fullName>Voicemail From Student</fullName>
                </value>
                <value>
                    <fullName>Voicemail To Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attempted</fullName>
                </value>
                <value>
                    <fullName>Bad Contact Info</fullName>
                </value>
                <value>
                    <fullName>Bypassed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previous_Activity_Id__c</fullName>
        <externalId>true</externalId>
        <label>Previous_Activity_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Previous_Id__c</fullName>
        <description>Previous Id if it exists</description>
        <externalId>true</externalId>
        <label>Previous Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>STARS_Outcome__c</fullName>
        <label>STARS Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Wrong Number/No Contact</fullName>
                </value>
                <value>
                    <fullName>Left a Message</fullName>
                </value>
                <value>
                    <fullName>Talked with Student</fullName>
                </value>
                <value>
                    <fullName>File Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Id__c</fullName>
        <externalId>true</externalId>
        <label>Smart Email Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Message_Id__c</fullName>
        <externalId>true</externalId>
        <label>Smart Email Message Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Status__c</fullName>
        <label>Smart Email Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>